LPS-41732 Avoid resizing image cropper on IE8

--- a/portal-web/docroot/html/css/portal/generic_portlet.css
+++ b/portal-web/docroot/html/css/portal/generic_portlet.css
@@ -95,6 +95,10 @@
 	height: 1%;
 }
 
+.ie8 .lfr-portrait-preview {
+	float: left;
+}
+
 .gecko .lfr-portrait-editor {
 	display: table-column;
 }
